--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,7 @@ html {
   -moz-osx-font-smoothing: grayscale;
   text-align: left;
   display: block;
+  height: 100%;
 }
 
 body {
@@ -88,6 +89,8 @@ body {
   margin-top: 40px;
   margin-left:20px;
   max-width: 1000px;
+  height: 100% /*added*/
+  
 }
 
 footer {
@@ -315,7 +318,7 @@ a:focus {
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
 }
 
-.blog-post header p {
+.blog-post header p section{
   font-size: var(--fontSize-2);
   font-family: var(--font-heading);
 }
@@ -362,6 +365,37 @@ a:focus {
   padding: var(--spacing-0); 
 }
 
+.row {
+  display: flex;
+  height: 100%;
+}
+
+.column {
+  flex: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  
+}
+
+.ghost-button {
+  width: 90%;
+  height: 100%;
+  color: #356676;
+  background: url('/Users/jennifer/Codes/portfolio/writing-portfolio/src/images/button-background.png') no-repeat;
+  border: 1.5px solid #356676;
+  font-size: 20px;
+  text-decoration: none;
+  font-family:'Times New Roman', Times, serif;
+  text-align: center;
+  vertical-align: middle;
+  margin:auto;
+}
+
+
+main {
+  height: 100%;
+}
 
 /* Media queries */
 
